--- a/styles.css
+++ b/styles.css
@@ -32,11 +32,13 @@ body{
 
 .content{
   background: white;
-
+  
 }
 
 @media (min-width:729px) {
-  
+  .form{
+    padding-left: 20px;
+  }
 .content {
   overflow: hidden;
   position: absolute;
@@ -47,7 +49,7 @@ body{
   background: white;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 24px;
   border-radius: 20px;
@@ -98,6 +100,7 @@ ul img{
 
 .right-side img{
   height: 593px;
+ 
 }
 
 label h3{
@@ -106,10 +109,7 @@ label h3{
   font-size: 12px;
   margin-bottom: 8px;
 }
-.form{
-  padding: 10px;
-  margin-right: 10px;
-}
+
 .form label{
   display: flex;
   flex-direction: column;
@@ -265,7 +265,6 @@ section{
     display: flex;
     flex-direction: column;
     justify-content: center;
-  
     padding: 10px;
   }
 
